feat: tagging + other review endpoints
